# teik_index

./: CMakeLists.txt  install_pkgs.sh  tkidx.py
src/: teik_index.c
